target/release/build/anyhow-6876f5a0a0c1372c/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/sock/code/wasm-game-of-life/target/release/build/anyhow-6876f5a0a0c1372c/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
